syntax = "proto3";

package protocol;

service UserService {
    rpc ListUser (ListUserRequestType) returns (ListUserResponseType) {}
    rpc RegisterUser (RegisterUserRequestType) returns (RegisterUserResponseType) {}
    rpc DeleteUser (DeleteUserRequestType) returns (DeleteUserResponseType) {}
}

message User {
    string id = 1;
    string email = 2;
    string firstName = 3;
    string lastName = 4;
}

message ListUserRequestType {

}

message ListUserResponseType {
    repeated User users = 1;
}

message RegisterUserRequestType {
    string email = 1;
}

message RegisterUserResponseType {
    string id = 1;
}

message DeleteUserRequestType {
    string id = 1;
}

message DeleteUserResponseType {

}